--- a/Front End/assets/css/style.css
+++ b/Front End/assets/css/style.css
@@ -707,6 +707,8 @@
 		background-image: url("http://via.placeholder.com/500x300");
 		width: 500px;
 		height: 300px;
+		margin-top: 45px;
+		align-self: center;
 	}
 
 /* Button */
@@ -1220,6 +1222,8 @@
 	}
 	#upload-box {
 		transition: .5s;
+		margin-top: 80px;
+		align-self: center;
 	}
 	.box {
 		/*background-color: #0f1215;*/
@@ -1242,6 +1246,102 @@
 		opacity: 0;
 		transform: translateY(20px);
 		transition: 2s;
+	}
+
+/* Results Flex Items */
+	#search-results {
+		font-family: Raleway;
+		font-size: 1rem;
+		line-height: 1.5;
+		letter-spacing: 0.3rem;
+		font-style: italic;
+		margin-top: 30px;
+		margin-bottom: 10px;
+		opacity: 0;
+	}
+	.results-flex-container{
+		display: flex;
+		flex-direction: column;
+		padding: 5px;
+	} 
+	.result {
+		background-color: rgba(256, 256, 256, .2);
+		display: flex;
+		flex-direction: row;
+		max-height: 400px;
+		border-radius: 7px;
+		margin: 15px;
+		opacity: 0;
+	}
+	.result-box {
+		/*background-color: #0f1215;*/
+		background-color: rgba(0, 0, 0, .3);
+		outline: 0px dashed rgba(256, 256, 256, 0);
+		outline-offset: 0px;
+		max-width: 600px;
+		transition: background-color 1s, outline-offset .5s, outline .2s;
+		padding: 10px;
+		border-radius: 7px;
+	}
+	.result-box:hover {
+		background-color: rgba(0, 0, 0, .2);
+		outline: 2px dashed white;
+		outline-offset: -10px;
+		
+	}
+	.result-list {
+		margin: 50px;
+	}
+	.result-item {
+		font-style: italic;
+	}
+	.divider-bar {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		width: 100%;
+		height: 1px;
+		background-color: white;
+		transform: scaleX(1);
+		transition: transform 0.5s ease;
+		padding: 5px;
+		border-radius: 3px;
+	}
+	.result:before {
+		content: '';
+		position: absolute;
+		right: 0;
+		width: 100%;
+		height: 2px;
+		background-color: white;
+		transform: scaleX(0);
+		transition: transform 0.5s ease;
+		display: block;
+		align-self: flex-start;
+		margin: -20px;
+	}
+	.result:after {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 2px;
+		right: 0px;
+		background-color: white;
+		transform: scaleX(0);
+		transition: transform 0.5s ease;
+		display: block;
+		align-self: flex-end;
+		margin: -20px;
+	}
+	.result:hover:before, 
+	.result:hover:after {
+		transform: scaleX(1);
+	}
+
+	.add-result {
+		opacity: 1;
+		transition: .5s ease;
 	}
 
 /* Footer */
