--- a/Front End/assets/css/style.css
+++ b/Front End/assets/css/style.css
@@ -704,12 +704,13 @@
 
 /*Placholder Stats*/
 	.image-placeholder {
-		background-image: url("http://via.placeholder.com/500x300");
+		font-style: italic;
 		width: 500px;
 		height: 300px;
 		margin-top: 45px;
 		align-self: center;
 	}
+
 
 /* Button */
 
