--- a/Front End/assets/css/style.css
+++ b/Front End/assets/css/style.css
@@ -1258,7 +1258,7 @@
 	.result {
 		background-color: rgba(256, 256, 256, .2);
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 		border-radius: 7px;
 		margin: 15px;
 		opacity: 0;
@@ -1347,7 +1347,7 @@
 		flex-direction: column;
 		padding: 5px;
 	} 
-	.result {
+	.preview {
 		background-color: rgba(256, 256, 256, .2);
 		display: flex;
 		flex-direction: column;
