--- a/Front End/assets/css/style.css
+++ b/Front End/assets/css/style.css
@@ -1340,6 +1340,7 @@
 		height: 300px;
 		margin-top: 5px;
 		align-self: center;
+		transform: translateY(20px);
 	}
 	.preview-flex-container{
 		opacity: 0;
@@ -1374,6 +1375,7 @@
 	.show-preview {
 		opacity: 1;
 		transition: .5s ease;
+		transform: translateY(-20px);
 	}
 	.preview-box {
 		background-color: rgba(0, 0, 0, .3);
